@@ -115,7 +115,9 @@ extern PINMAME_VIDEO_UPDATE(seminidmd4_update);
 #define SE_DIGIT      0x10
 #define SE_LED2       0x20
 
+#ifdef PROC_SUPPORT
 int se_m2sw(int col, int row);
+#endif
 
 #endif /* INC_SE */
 
