@@ -3,6 +3,9 @@ Version 2.7 (X X, 2016) - ""
 
 *** CORE/CPU ***
 64bit compilation supported
+XMAME port for unix/linux systems
+PROC support (needs special compile with PROC_SUPPORT defined) to drive (at least) real WPC machines with PinMAME/PROC
+
 New S14001A sound core for old Sterns (Catacomb, Flight 2000, Freefall, Lightning, Orbitor 1, and Split Second)
 Improved BSMT2000 sound core for Sega, Alvin G. DMDs, Data East DMDs (Batman and newer), and Stern DMDs (up to Terminator 3)
 Improved Brave Team sound core
